<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/service_stop"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_service_request" />
        <item
            android:id="@+id/add_stop"
            android:icon="@drawable/ic_add_circle_24px"
            android:title="@string/menu_add_stop" />
        <item
            android:id="@+id/remove_stop"
            android:icon="@drawable/ic_remove_stop"
            android:title="@string/remove_stop" />

        <item
            android:id="@+id/update_stop"
            android:icon="@drawable/ic_system_update_stop"
            android:title="@string/update_stop" />
        <item
            android:id="@+id/view_history"
            android:icon="@drawable/ic_history"
            android:title="@string/view_history" />
    </group>
</menu>
