<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nftastops.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.nftastops.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_stops"
        android:name="com.example.nftastops.ui.stops.StopFragment1"
        android:label="@string/add_stop_fragment_home"
        tools:layout="@layout/stop_fragment1" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.nftastops.ui.history.HistoryFragment"
        android:label="@string/history_fragment"
        tools:layout="@layout/stop_fragment1" />
    <fragment
        android:id="@+id/nav_stops_remove"
        android:name="com.example.nftastops.ui.stops.StopRemoveFragment"
        android:label="@string/remove_stop_fragment"
        tools:layout="@layout/stop_fragment1" />
    <fragment
        android:id="@+id/nav_service_request"
        android:name="com.example.nftastops.ui.serviceRequest.ServiceRequestFragment"
        android:label="@string/service_request_fragment"
        tools:layout="@layout/stop_fragment1" />

</navigation>