<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">


        <CheckBox
            android:id="@+id/shelterId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/shelter"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/advertisementId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/advertisement"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/benchId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/bench"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/bikeRackId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/bikeRack"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/trashCanId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/trashCan"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/timetableId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/timeTable"
            android:textSize="@dimen/text_size" />

        <CheckBox
            android:id="@+id/systemMapId"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:hint="@string/systemMap"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="2"
                android:gravity="fill"
                android:text="Route"
                android:textSize="@dimen/text_size" />

            <com.example.nftastops.utilclasses.MultiSpinner
                android:id="@+id/autocomplete_route"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_padding_2"
                android:layout_weight="4"
                android:inputType="textAutoComplete"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/add_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding_2"
            android:drawableRight="@drawable/ic_add_a_photo"
            android:text="@string/add_pictures"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/pictures"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            android:visibility="gone"
            android:weightSum="3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mypics0"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:layout_weight="1"
                app:layout_collapseParallaxMultiplier="0.7" />

            <ImageView
                android:id="@+id/mypics1"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:layout_weight="1"
                app:layout_collapseParallaxMultiplier="0.7" />

            <ImageView
                android:id="@+id/mypics2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:layout_weight="1"
                app:layout_collapseParallaxMultiplier="0.7" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_comments"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_comments">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:id="@+id/admin_comments"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:hint="@string/add_comments"-->
        <!--            android:textSize="@dimen/text_size"-->
        <!--            android:layout_margin="@dimen/layout_padding_2"/>-->

        <Button
            android:id="@+id/fragment2Next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:text="@string/submit"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/layout_padding_2"/>
            android:textSize="@dimen/text_size" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/trashCanId"
            app:layout_constraintStart_toStartOf="@+id/trashCanId"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:textSize="@dimen/text_size" />
    </LinearLayout>


</ScrollView>