<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/stopIDll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="@dimen/layout_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stop_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/stop_id_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="@dimen/layout_padding"
            android:orientation="horizontal"
            android:textSize="@dimen/text_size"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/latitude"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/lat">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icLat"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="@dimen/layout_padding"
            android:orientation="horizontal"
            android:textSize="@dimen/text_size"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/longitude"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/lon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icLong"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_location" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reason"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_padding"
            android:hint="@string/reason">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/add_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_2"
            android:layout_margin="@dimen/layout_padding"
            android:drawableRight="@drawable/ic_add_a_photo"
            android:text="@string/add_pictures"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/pictures_sr"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_image_sr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbars="none" />

        </LinearLayout>

        <Button
            android:id="@+id/fragmentSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_margin="@dimen/layout_padding"
            android:padding="@dimen/layout_padding"
            android:text="@string/submit"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</ScrollView>